updated/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: otel-demo
